Changed the error message because it didnt work properly for smaller windows when location was not found. Also fixed an issue where the nav dropdown for gardens was being hidden behind the plant table

--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -67,6 +67,7 @@ nav ul li a:hover, nav ul li input[type="submit"]:hover {
 .dropdown {
     position: relative;
     display: inline-block;
+    z-index: 999;  /* Always show on top of everything */
 }
 
 
@@ -406,8 +407,6 @@ nav ul li a:hover, nav ul li input[type="submit"]:hover {
     border-radius: 5px;
     background: rgba(255, 0, 0, 0.3);
     height: fit-content;
-    position: absolute;
-    margin-right: 2%;
     justify-content: center;
     display: flex;
     align-items: center;
